[Agrim]ADD:Generate Swagger spec for Signup API

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,3 +13,7 @@ default: &default
 development:
   <<: *default
   database: bookstore_app_development
+
+test:
+  <<: *default
+  database: bookstore_app_test
